New Level Color-cells

--- a/dev/index.html
+++ b/dev/index.html
@@ -47,6 +47,16 @@
 					</div>
 				</li>
 			</a>
+			<a href="colored-cells.html">
+				<li class="levels__item">
+					<div class="level__title">
+						<span>4.</span>Цветные ячейки
+					</div>
+					<div class="level__text">
+						Нужно посчитать цветные ячейки
+					</div>
+				</li>
+			</a>
 		</ul>
 	</div>
 </body>
