--- a/dev/colored-cells.html
+++ b/dev/colored-cells.html
@@ -58,9 +58,9 @@
 				</div>
 			</main>
 			<main id="resultPage" class="page __result __container">
-					<div class="text__title">
-						Результат:
-						<br> <span>Смена цвета</span>
+					<div class="result-page__title">
+						Результат
+						<br> <span>Цветные ячейки</span>
 					</div>
 				<div class="body__result">
 					<div class="result__body">
@@ -69,7 +69,7 @@
 								Время реакции (миллисек):
 							</div>
 							<div class="result__text">
-								Минимальный лимит для прохождения 760 миллисекунд.
+								Минимальный лимит для прохождения 1760 миллисекунд.
 							</div>
 						</div>
 						<div id="reactione" class="result__value">Считаем...</div>
@@ -80,10 +80,26 @@
 								Процент Ошибочных действий:
 							</div>
 							<div class="result__text">
-								Колличество допущенных ошибок должно быть не больше 17%
+								Колличество допущенных ошибок должно быть не больше 7%
 							</div>
 						</div>
 						<div id="procent" class="result__value">Считаем...</div>
+					</div>
+					<div id="imgOk" class="result-img__block-ok">
+						<div class="result-img__img">
+							<img src="/img/ok.png" alt="">
+						</div>
+						<div class="result-img__title">
+							Тест пройден! У вас сегодня очень хороший результат
+						</div>
+					</div>
+					<div id="imgNo" class="result-img__block-no">
+						<div class="result-img__img">
+							<img src="/img/no.png" alt="">
+						</div>
+						<div class="result-img__title">
+							Тест провален! Вам нужно постараться немного лучше
+						</div>
 					</div>
 				</div>
 				<div class="block_button">
