--- a/dev/index.html
+++ b/dev/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container__levels">
 		<div class="levels__title">
-			<h1>Упражнения</h1>
+			<h1>Проверь свою реакцию!</h1>
 		</div>
 		<div class="levels__text">
 			<p>Практикуйтесь ежедневно или когда не можете сконцентрироватся и вы увидите улучшения уже очень скоро!</p>
