--- a/dev/min-max.html
+++ b/dev/min-max.html
@@ -45,8 +45,8 @@
 				</div>
 			</main>
 			<main id="resultPageMinMax" class="page __result __container">
-				<div class="text__title">
-					Результат:
+				<div class="result-page__title">
+					Результат
 					<br> <span>Сравнение Цифр</span>
 				</div>	
 				<div class="body__result">
@@ -71,6 +71,22 @@
 							</div>
 						</div>
 						<div id="procentMinMax" class="result__value">Считаем...</div>
+					</div>
+					<div id="imgOk" class="result-img__block-ok">
+						<div class="result-img__img">
+							<img src="/img/ok.png" alt="">
+						</div>
+						<div class="result-img__title">
+							Тест пройден! У вас сегодня очень хороший результат
+						</div>
+					</div>
+					<div id="imgNo" class="result-img__block-no">
+						<div class="result-img__img">
+							<img src="/img/no.png" alt="">
+						</div>
+						<div class="result-img__title">
+							Тест провален! Вам нужно постараться немного лучше
+						</div>
 					</div>
 				</div>
 				<div class="block_button">
