--- a/dev/color-change.html
+++ b/dev/color-change.html
@@ -35,8 +35,8 @@
 				</div>
 			</main>
 			<main id="resultPage" class="page __result __container">
-					<div class="text__title">
-						Результат:
+					<div class="result-page__title">
+						Результат
 						<br> <span>Смена цвета</span>
 					</div>
 				<div class="body__result">
@@ -61,6 +61,22 @@
 							</div>
 						</div>
 						<div id="procent" class="result__value">Считаем...</div>
+					</div>
+					<div id="imgOk" class="result-img__block-ok">
+						<div class="result-img__img">
+							<img src="/img/ok.png" alt="">
+						</div>
+						<div class="result-img__title">
+							Тест пройден! У вас сегодня очень хороший результат
+						</div>
+					</div>
+					<div id="imgNo" class="result-img__block-no">
+						<div class="result-img__img">
+							<img src="/img/no.png" alt="">
+						</div>
+						<div class="result-img__title">
+							Тест провален! Вам нужно постараться немного лучше
+						</div>
 					</div>
 				</div>
 				<div class="block_button">
