--- a/dev/color-catch.html
+++ b/dev/color-catch.html
@@ -15,7 +15,7 @@
 			<main id="gamePageCatchColor" class="page __game __container">
 				<div class="block__text">
 					<div class="text__title">
-						<h1>Смена цвета.</h1>
+						<h1>Поймай цвет!</h1>
 					</div>
 					<div class="text__text">
 						<p>Нажимайте на рамку, как только меняется цвет, как можно быстрее.</p>
@@ -47,7 +47,7 @@
 			<main id="resultPageCatchColor" class="page __result __container">
 					<div class="result-page__title">
 						Результат
-						<br> <span>Сравнение Цифр</span>
+						<br> <span>Поймай цвет!</span>
 					</div>
 					<div class="body__result">
 						<div class="result__body">
@@ -74,7 +74,7 @@
 						</div>
 						<div id="imgOk" class="result-img__block-ok">
 							<div class="result-img__img">
-								<img src="/img/ok.png" alt="">
+								<img src="../img/ok.png" alt="">
 							</div>
 							<div class="result-img__title">
 								Тест пройден! У вас сегодня очень хороший результат
@@ -82,7 +82,7 @@
 						</div>
 						<div id="imgNo" class="result-img__block-no">
 							<div class="result-img__img">
-								<img src="/img/no.png" alt="">
+								<img src="../img/no.png" alt="">
 							</div>
 							<div class="result-img__title">
 								Тест провален! Вам нужно постараться немного лучше
