--- a/dev/colored-cells.html
+++ b/dev/colored-cells.html
@@ -87,7 +87,7 @@
 					</div>
 					<div id="imgOk" class="result-img__block-ok">
 						<div class="result-img__img">
-							<img src="../img/ok.png" alt="">
+							<img src="./img/ok.png" alt="">
 						</div>
 						<div class="result-img__title">
 							Тест пройден! У вас сегодня очень хороший результат
@@ -95,7 +95,7 @@
 					</div>
 					<div id="imgNo" class="result-img__block-no">
 						<div class="result-img__img">
-							<img src="../img/no.png" alt="">
+							<img src="./img/no.png" alt="">
 						</div>
 						<div class="result-img__title">
 							Тест провален! Вам нужно постараться немного лучше
